--- a/CoCKeeperHelper/Views/Actors/Index.cshtml
+++ b/CoCKeeperHelper/Views/Actors/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using CoCKeeperHelper.Data
+@using Microsoft.EntityFrameworkCore
 @model IEnumerable<CoCKeeperHelper.Data.Character>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -6,17 +7,17 @@
     <title></title>
 </head>
 <body>
-<table>
-    @foreach (var actor in Model)
-    {
-        <tr>
-            <td>@actor.ID</td>
-            <td>@actor.Name</td>
-        </tr>
-    }
-</table>
+    <table>
+        @foreach (var actor in Model)
+        {
+            <tr>
+                <td>@actor.ID</td>
+                <td>@actor.Name</td>
+            </tr>
+        }
+    </table>
 
-<a asp-action="Create">Create</a>
+    <a asp-action="Create">Create</a>
 
 </body>
 </html>
